# INFO901

./: README.md  pyproject.toml  requirements.txt
src/: broadcast_direct_sync_process.py  broadcast_process.py  broadcast_sync_process.py  critical_process.py  direct_process.py  direct_sync_process.py  launcher.py  process.py  sync_process.py
src/com/: __init__.py  com.py
src/com/mailbox/: mailbox.py
src/com/messages/: broadcast_response.py  communication.py  generic.py  lamport.py  multiple.py  numerotation.py  personal.py  personal_response.py  sync_multiple.py  sync_personal.py  sync_response.py  system.py  token.py
